<resources>
    <string name="app_name">My Application</string>


    <string name="action_settings">Settings</string>
    <string name="Name">Name : </string>
    <string name="phone_no">Mobile Number : </string>
    <string name="email">Email id : </string>
    <string name="next">NEXT -> </string>

    <string name="field1">Field 1 : </string>
    <string name="field2">Field 2 : </string>
    <string name="field3">Field 3 : </string>
    <string name="field4">Field 4 : </string>
    <string name="title_activity_additionaldetail">AdditionalDetails</string>

    <string name="takepic">Take Photo to Save</string>
    <string name="takemultpic">Take another Photo and save</string>
    <string name="takelocation">Take Location Details and Save</string>
    <string name="done">FINISH AND SAVE</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_other_details">otherDetails</string>
</resources>
