<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#9c9c9c"
    android:id="@+id/mainlayout">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:id="@+id/Top1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:background="#ffffff"
            android:id="@+id/linearLayout"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:id="@+id/textView"
                android:height="@dimen/abc_action_bar_content_inset_material"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_gravity="right"
            android:id="@+id/pad1"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:background="#ffffff"
            android:id="@+id/linearLayout3"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="201sp"
                android:layout_height="35sp"
                android:id="@+id/editText"
                android:inputType="text"
                android:textStyle="normal"
                android:typeface="normal"
                android:textSize="14sp"
                android:foregroundGravity="bottom"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:id="@+id/Top2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:id="@+id/linearLayout1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_no"
                android:id="@+id/textView1"
                android:height="@dimen/abc_action_bar_content_inset_material"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="5sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_gravity="right"
            android:id="@+id/pad2"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:id="@+id/linearLayout4"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="201sp"
                android:layout_height="35sp"
                android:id="@+id/editText1"
                android:inputType="phone"
                android:textStyle="normal"
                android:typeface="normal"
                android:textSize="14sp"
                android:foregroundGravity="bottom"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:id="@+id/Top3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:id="@+id/linearLayout2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/textView2"
                android:height="@dimen/abc_action_bar_content_inset_material"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="5sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="12sp"
            android:layout_gravity="right"
            android:id="@+id/pad3"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:id="@+id/linearLayout5"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="201sp"
                android:layout_height="35sp"
                android:id="@+id/editText2"
                android:inputType="textEmailAddress"
                android:textStyle="normal"
                android:typeface="normal"
                android:textSize="14sp"
                android:foregroundGravity="bottom"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/Top4">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/button"
            android:background="#a3c6ff"
            android:paddingLeft="25sp"
            android:paddingRight="25sp"
            android:clickable="true"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


</LinearLayout>
